--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,13 @@
 group 'me.yohom.amap_core_fluttify'
 version '1.0-SNAPSHOT'
 
+// ⚠️ 这里原来绑了 com.android.tools.build:gradle:7.1.2，
+// 会和主工程 AGP 8.x 冲突，直接删掉整个 buildscript 块就行，让它用主工程的。
+/*
 buildscript {
     repositories {
         google()
         mavenCentral()
-        
     }
 
     dependencies {
@@ -17,30 +19,42 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
-        
     }
 }
+*/
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 31
+    // 🔴 1. 必须加 namespace（AGP 8 强制要求）
+    // 用 AndroidManifest.xml 里的 package 值：
+    namespace "me.yohom.amap_core_fluttify"
+
+    // 🔵 2. 建议跟主工程对齐到 34（至少 33+）
+    compileSdkVersion 34
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
         main.jniLibs.srcDir 'libs'
     }
+
     defaultConfig {
-        minSdkVersion 16
+        // 高德这些 SDK minSdk 通常已经要求不低了，
+        // 你主工程是 24，这里至少跟上，不要 16 了
+        minSdkVersion 24
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    lintOptions {
-        disable 'InvalidPackage'
-    }
+
+    // 🟣 3. Java 版本升级到 11，和主工程一致
     compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
+
+    // 这个库本身没 Kotlin 代码就不用写 kotlinOptions 了
+
+    // ⚠️ 4. packagingOptions 这块 AGP 8 可能会再给 warning / error，
+    // 如果后面报 packagingOptions 的错，第一步可以先整体注释掉这段看看。
     packagingOptions {
         merge 'res/values/values.xml'
         merge 'AndroidManifest.xml'
@@ -48,6 +62,7 @@ android {
         merge 'classes.jar'
         merge 'proguard.txt'
     }
+
     buildTypes {
         release {
             consumerProguardFiles "proguard-rules.pro"
@@ -60,8 +75,4 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     compileOnly rootProject.findProject(":foundation_fluttify")
-    // flutter plugin dependency
-    
-    // sdk dependency
-    
 }
